--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "cypress": "^6.4.0",
-    "cypress-wait-until": "^1.7.1",
+    "playwright": "^1.8.1",
     "twilio": "^3.55.1",
     "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/commander": "^2.12.2",
+    "@types/node": "^14.14.31",
+    "commander": "^7.1.0"
   }
 }
