--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  schedule:
-  - cron: '*/15 * * * *'
+  # schedule:
+  # - cron: '*/15 * * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
